# safe-agent

./: .clippy.toml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.example.toml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: codeql.yml  docker.yml  pages.yml  test.yml
bridge/android-sms/: README.md  server.py
bridge/imessage/: README.md  applescript.js  package.json  server.js
config/: CLAUDE.md
scripts/: chroot-install.sh  chroot-jail.sh  sandbox-install-macos.sh  sandbox-install.ps1
skills/claude-monitor/: main.py  routes.rhai  skill.toml
src/: acme.rs  config.rs  crypto.rs  db.rs  error.rs  federation.rs  keyring.rs  main.rs  security.rs  trash.rs  tunnel.rs  users.rs
src/agent/: actions.rs  cron_runner.rs  mod.rs  reasoning.rs  tick.rs  tool_parse.rs
src/approval/: mod.rs  types.rs
src/dashboard/: auth.rs  authn.rs  binaries.rs  handlers.rs  messaging_webhook.rs  mod.rs  oauth.rs  routes.rs  skill_ext.rs  sse.rs
src/goals/: mod.rs
src/google/: mod.rs  oauth.rs  tokens.rs
src/installer/: download.rs  mod.rs  registry.rs
src/llm/: advisor.rs  aider.rs  claude.rs  cline.rs  codex.rs  context.rs  gemini.rs  local.rs  mod.rs  ollama.rs  openrouter.rs  prompts.rs
src/memory/: archival.rs  consolidation.rs  conversation.rs  core.rs  embeddings.rs  episodic.rs  extraction.rs  knowledge.rs  mod.rs  user_model.rs
src/messaging/: bridge.rs  commands.rs  discord.rs  mod.rs  signal.rs  telegram.rs  twilio.rs  whatsapp.rs
src/security/: audit.rs  capabilities.rs  cost_tracker.rs  mod.rs  pii.rs  rate_limiter.rs  twofa.rs
src/skills/: extensions.rs  manager.rs  mod.rs  plugin.rs  prompt_skill.rs  resolver.rs  rhai_runtime.rs  signing.rs
src/telegram/: mod.rs  (+2 more)
web/: package.json  pnpm-lock.yaml  svelte.config.js
(+115 files in other folders)
