[package]
name = "safe-agent"
version = "0.1.0"
edition = "2024"
description = "Sandboxed autonomous AI agent with tool execution, knowledge graph, and multi-interface control"

[features]
default = []
local = ["dep:llama-gguf"]
local-cuda = ["local", "llama-gguf/cuda"]

[dependencies]

# Local LLM inference (optional — enabled with --features local)
llama-gguf = { git = "https://github.com/Lexmata/llama-gguf.git", branch = "main", default-features = false, features = ["cpu"], optional = true }
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Misc
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Web tools
htmd = "0.1"

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Google OAuth2
oauth2 = "4"

# Browser automation
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"
dotenvy = "0.15.7"

# JWT auth for dashboard
jsonwebtoken = "9"

# Unix process group management
[target.'cfg(unix)'.dependencies]
libc = "0.2"
